[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/godot-openxr/scenes/first_person_controller_vr.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Pad.tscn" type="PackedScene" id=3]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[node name="Punchmania-vr" type="Spatial"]
script = ExtResource( 2 )

[node name="FPController" parent="." instance=ExtResource( 1 )]

[node name="Screen" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -0.00235621, -0.999997, 0, 0.999997, -0.00235621, 0, 1, -3.044 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="LeftTop" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.5, -0.45 )
direction = "right"

[node name="LeftMiddle" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.2, -0.45 )
direction = "right"

[node name="LeftBottom" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.9, -0.45 )
direction = "right"

[node name="RightTop" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.5, -0.45 )
direction = "left"

[node name="RightMiddle" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1.2, -0.45 )
direction = "left"

[node name="RightBottom" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.9, -0.45 )
direction = "left"

[connection signal="tree_exiting" from="." to="." method="_on_Punchmaniavr_tree_exiting" flags=6]
[connection signal="left_controller_button_pressed" from="FPController" to="." method="_on_FPController_left_controller_button_pressed"]
[connection signal="left_controller_button_release" from="FPController" to="." method="_on_FPController_left_controller_button_release"]
[connection signal="right_controller_button_pressed" from="FPController" to="." method="_on_FPController_right_controller_button_pressed"]
[connection signal="right_controller_button_release" from="FPController" to="." method="_on_FPController_right_controller_button_release"]
[connection signal="body_shape_entered" from="LeftTop" to="." method="_on_LeftTop_body_shape_entered"]
[connection signal="body_shape_exited" from="LeftTop" to="." method="_on_LeftTop_body_shape_exited"]
[connection signal="body_shape_entered" from="LeftMiddle" to="." method="_on_LeftMiddle_body_shape_entered"]
[connection signal="body_shape_exited" from="LeftMiddle" to="." method="_on_LeftMiddle_body_shape_exited"]
[connection signal="body_shape_entered" from="LeftBottom" to="." method="_on_LeftBottom_body_shape_entered"]
[connection signal="body_shape_exited" from="LeftBottom" to="." method="_on_LeftBottom_body_shape_exited"]
[connection signal="body_shape_entered" from="RightTop" to="." method="_on_RightTop_body_shape_entered"]
[connection signal="body_shape_exited" from="RightTop" to="." method="_on_RightTop_body_shape_exited"]
[connection signal="body_shape_entered" from="RightMiddle" to="." method="_on_RightMiddle_body_shape_entered"]
[connection signal="body_shape_exited" from="RightMiddle" to="." method="_on_RightMiddle_body_shape_exited"]
[connection signal="body_shape_entered" from="RightBottom" to="." method="_on_RightBottom_body_shape_entered"]
[connection signal="body_shape_exited" from="RightBottom" to="." method="_on_RightBottom_body_shape_exited"]
